<resources>
    <string name="app_name">GetherParams</string>
    <string name="network_exception">network exception</string>
    <string name="carrieroperator">运营商</string>
    <string name="mccmnc">MCCMNC</string>
    <string name="local_lac">位置区(TAC/LAC)</string>
    <string name="enb_rnc">eNb/RNC</string>
    <string name="cid_cid_bid">扇区(CID/BID)</string>
    <string name="arfcn">ARFCN</string>
    <string name="pci_psc">扰码(PCI/PSC)</string>
    <string name="mobile">移动</string>
    <string name="task">作业</string>
    <string name="road_test">路测</string>
    <string name="system_info">系统信息</string>
    <string name="log">LOG</string>
    <string name="setting">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_info">手机信息</string>
    <string name="brand_modle">品牌型号</string>
    <string name="test_txt">--</string>
    <string name="main_number">主卡号码</string>
    <string name="imsi">IMSI</string>
    <string name="imei">IMEI</string>
    <string name="android_version">安卓系统版本</string>
    <string name="is_root">是否ROOT</string>
    <string name="screen_size">屏幕尺寸</string>
    <string name="screen_ratio">屏幕分辨率</string>
    <string name="screen_density">像素密度</string>
    <string name="system_run_time">系统运行时间</string>
    <string name="gsm_up_down">蜂窝上行/下行</string>
    <string name="wifi_up_down">WIFI上行/下行</string>
    <string name="cup">CUP</string>
    <string name="modle">型号</string>
    <string name="cup_number">CUP核心数</string>
    <string name="main_frequency">主频</string>
    <string name="main_frequency_mhz">主频 MHz</string>
    <string name="fabrication_process">制造工艺</string>
    <string name="support">支持</string>
    <string name="base_band">基带</string>
    <string name="store_info">存储信息</string>
    <string name="run_ram_volume">运行内存容量(RAM)</string>
    <string name="current_ram_overplus">当前内存剩余</string>
    <string name="phone_rom">手机内存(ROM)</string>
    <string name="sdcard">SD存储卡</string>
    <string name="photo_system">图像系统</string>
    <string name="behind_camera_pix">后置摄像头像素</string>
    <string name="behind_camera_ratio">后置摄像头分辨率</string>
    <string name="forword_camera_ratio">前置摄像头分辨率</string>
    <string name="forward_camera_pix">前置摄像头像素</string>
    <string name="gpu">GPU</string>
    <string name="wifi_info">WIFI信息</string>
    <string name="wifi_connect">WIFI连接到</string>
    <string name="exterior_ip">外网IP</string>
    <string name="inside_ip">内网IP</string>
    <string name="wifi_connect_speed">WIFI连接速度</string>
    <string name="mac_address">MAC地址</string>
    <string name="battery_info">电池信息</string>
    <string name="battery_volume">电池容量</string>
    <string name="voltage">电压</string>
    <string name="current_electricity">当前电量</string>
    <string name="current_temperature">当前温度</string>
    <string name="rechange_status">充电状态</string>
    <string name="permission_camera_rationale">请求相机权限</string>
    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="permission_camera_denied">权限被通过</string>
    <string name="permission_camera_neverask">权限被拒绝了</string>
    <string-array name="task_title_array">
        <item>服务测试</item>
        <item>延迟测试</item>
        <item>语音测试</item>
        <item>短信测试</item>
        <item>流媒体</item>
        <item>音频测试</item>
    </string-array>
    <string name="service_test">服务测试</string>
    <string name="delay_test">延迟测试</string>
    <string name="vioce_test">语音测试</string>
    <string name="sms_test">短信测试</string>
    <string name="stream_test">流媒体</string>
    <string name="autio_test">音频测试</string>
    <string name="last_test_time">上次测试时间</string>
    <string name="run_this_test_allow_wifi_gprs">运行此测试讲使用WIFI或移动网络数据</string>
    <string name="other_phone_number">对方号码</string>
    <string name="is_check_time">添加时间戳</string>
    <string name="answer_whate_do_you_do">请问你们需要干什么？</string>
    <string name="run_service_test">运行服务测试</string>
    <string name="dns">DNS</string>
    <string name="help">帮助</string>
    <string name="icon_show_setting">图标显示设置</string>
    <string name="init">初始化</string>
    <string name="feedback">反馈</string>
    <string name="private_regulations">隐私条例</string>
    <string name="about_me">关于我们</string>
    <string name="update_online">在线更新</string>
    <string name="share_to_friend">分享给朋友</string>
    <string name="icon_show_setting_toast">首页将不显示关闭状态的图标</string>
    <string name="gps">GPS</string>
    <string name="camera">相机</string>
    <integer name="phone_length">11</integer>
</resources>
