<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/task_sms_item_other_phone_tv"
            style="@style/txt_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_left_right"
            android:text="@string/other_phone_number" />

        <TextView
            android:id="@+id/task_sms_item_last_time_tv"
            style="@style/txt_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_left_right"
            android:text="@string/last_test_time" />

    </LinearLayout>

    <EditText
        android:id="@+id/task_sms_item_other_phone_et"
        style="@style/txt_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_left_right"
        android:gravity="left"
        android:hint="@string/other_phone_number"
        android:inputType="number"
        android:maxLength="@integer/phone_length"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/txt_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_left_right"
            android:text="@string/other_phone_number" />

        <CheckBox
            android:id="@+id/task_sms_item_time_check"
            style="@style/txt_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_left_right"
            android:text="@string/is_check_time" />

        <EditText
            style="@style/txt_normal"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:gravity="left"
            android:hint="@string/answer_whate_do_you_do"
            />


    </LinearLayout>

</LinearLayout>