<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/topbar_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_them" />

    <include
        android:id="@+id/include_relative_back"
        layout="@layout/include_back" />

    <TextView
        style="@style/txt_normal_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/icon_show_setting_toast" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_left_right">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_setting_location" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_switch_no" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/between_line_height"
        android:background="@color/color_between_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_left_right">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_setting_camera" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/camera" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_switch_no" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/between_line_height"
        android:background="@color/color_between_line" />

</LinearLayout>
