<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_them"
    android:orientation="vertical"
    tools:context="com.pursuege.gether.android.ui.setting.SettingActivity">

    <View
        android:id="@+id/topbar_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_them" />

    <include
        android:id="@+id/include_relative_back"
        layout="@layout/include_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_back_ground"
        android:scrollbars="none">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="@drawable/selector_item_white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onclickSettingHelp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left_right"
                android:paddingRight="@dimen/padding_left_right">

                <TextView
                    style="@style/txt_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/help" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_arrow_right" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/between_line_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="@drawable/selector_item_white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onclickSettingIconSetting"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left_right"
                android:paddingRight="@dimen/padding_left_right">

                <TextView
                    style="@style/txt_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/icon_show_setting" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_arrow_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/between_line_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="@drawable/selector_item_white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onclickSettingInit"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left_right"
                android:paddingRight="@dimen/padding_left_right">

                <TextView
                    style="@style/txt_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/init" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_arrow_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/between_line_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="@drawable/selector_item_white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onclickSettingFeedback"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left_right"
                android:paddingRight="@dimen/padding_left_right">

                <TextView
                    style="@style/txt_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feedback" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_arrow_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/between_line_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="@drawable/selector_item_white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onclickSettingprivate"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left_right"
                android:paddingRight="@dimen/padding_left_right">

                <TextView
                    style="@style/txt_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/private_regulations" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_arrow_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/between_line_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="@drawable/selector_item_white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onclickSettingAboutMe"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left_right"
                android:paddingRight="@dimen/padding_left_right">

                <TextView
                    style="@style/txt_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about_me" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_arrow_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/between_line_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="@drawable/selector_item_white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onclickSettingUpdateOnline"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left_right"
                android:paddingRight="@dimen/padding_left_right">

                <TextView
                    style="@style/txt_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_online" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/icon_arrow_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/between_line_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="@drawable/selector_item_white"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onclickSettingShareFriend"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left_right"
                android:paddingRight="@dimen/padding_left_right">

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_share_to_friend" />
                <TextView
                    style="@style/txt_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_left_right"
                    android:text="@string/share_to_friend" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="68dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
