<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_them"
    android:fitsSystemWindows="true"
    tools:context="com.pursuege.gether.android.ui.MainActivity">

    <View
        android:id="@+id/topbar_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_them" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingRight="48dp"
        android:scrollbars="none"
        android:id="@+id/horizontalScrollView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="4dp"
                android:src="@drawable/icon_localtion" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:src="@drawable/icon_localtion" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:src="@drawable/icon_home_camera" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:src="@drawable/icon_home_android" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:src="@drawable/icon_home_plane" />

        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:clickable="true"
        android:onClick="onclickHomeSetting"
        android:src="@drawable/icon_home_setting" />

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="58dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="onclickHomeMobile"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/home_mobile_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_home_mobile_press" />

            <TextView
                android:id="@+id/home_mobile_tv"
                style="@style/txt_normal_hint_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/mobile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:onClick="onclickHomeTask"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/home_task_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_home_task" />

            <TextView
                android:id="@+id/home_task_tv"
                style="@style/txt_normal_hint_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:onClick="onclickHomeTest"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/home_test_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_home_test" />

            <TextView
                android:id="@+id/home_test_tv"
                style="@style/txt_normal_hint_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/road_test" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:onClick="onclickHomeSystemInfo"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/home_system_info_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_home_system_info" />

            <TextView
                android:id="@+id/home_system_info_tv"
                style="@style/txt_normal_hint_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:onClick="onclickHomeLog"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_log_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_home_log" />

            <TextView
                android:id="@+id/home_log_tv"
                style="@style/txt_normal_hint_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
